# cloudbox-master/src/main/java/com/cloudbox/master/container/dto/EndpointResponse.java
@@ -1,0 +1,11 @@
+package com.cloudbox.master.container.dto;
+
+import com.cloudbox.master.container.PortProtocol;
+
+public record EndpointResponse(
+        Integer containerPort,
+        Integer hostPort,
+        PortProtocol protocol,
+        String address,
+        String url) {
+}
